--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="device">
+        <div class="display">999.999.999</div>
+        <div class="buttons">
+          <div class="number7">7</div>
+          <div class="number8">8</div>
+          <div class="number9">9</div>
+          <div class="divide">÷</div>
+          <div class="number4">4</div>
+          <div class="number5">5</div>
+          <div class="number6">6</div>
+          <div class="multiply">×</div>
+          <div class="number1">1</div>
+          <div class="number2">2</div>
+          <div class="number3">3</div>
+          <div class="subtract">–</div>
+          <div class="clear">C</div>
+          <div class="number0">0</div>
+          <div class="equals">=</div>
+          <div class="add">+</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
