--- a/src/index.html
+++ b/src/index.html
@@ -16,24 +16,24 @@
   <body>
     <div class="container">
       <div class="device">
-        <div class="display">999.999.999</div>
+        <div id="display">0</div>
         <div class="buttons">
-          <div class="number7">7</div>
-          <div class="number8">8</div>
-          <div class="number9">9</div>
-          <div class="divide">÷</div>
-          <div class="number4">4</div>
-          <div class="number5">5</div>
-          <div class="number6">6</div>
-          <div class="multiply">×</div>
-          <div class="number1">1</div>
-          <div class="number2">2</div>
-          <div class="number3">3</div>
-          <div class="subtract">–</div>
-          <div class="clear">C</div>
-          <div class="number0">0</div>
-          <div class="equals">=</div>
-          <div class="add">+</div>
+          <div class="button">7</div>
+          <div class="button">8</div>
+          <div class="button">9</div>
+          <div class="button divide">÷</div>
+          <div class="button">4</div>
+          <div class="button">5</div>
+          <div class="button">6</div>
+          <div class="button multiply">×</div>
+          <div class="button">1</div>
+          <div class="button">2</div>
+          <div class="button">3</div>
+          <div class="button subtract">–</div>
+          <div class="button clear">C</div>
+          <div class="button">0</div>
+          <div class="button equals">=</div>
+          <div class="button add">+</div>
         </div>
       </div>
     </div>
